# lidar_pipeline

./: .gitmodules  Cargo.toml  README.md  build.rs  deploy.bash  obstacles_lidar_mask.yaml
.github/workflows/: rust_arm.yml  rust_ubuntu.yml
src/: beacons.rs  clustering.rs  communication.rs  distance_to_beacons.rs  distance_to_ellipse.rs  filtering.rs  geometrical_tools.rs  ivy_handler.rs  main.rs  obstacles.rs  redis_handler.rs
src/clustering/: clusterer.rs  proximity_clusterer.rs
src/communication/: link.rs  transport.rs  udp_link.rs
src/filtering/: cluster_filter.rs  sample_filter.rs
