[package]
name = "lidar_pipeline"
version = "0.1.0"
authors = ["guilhembn <gbuisan@laas.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lidar_pipeline"
path = "src/main.rs"

[dependencies]
lidar_rd = {git = "https://github.com/rustyducks/lidar_rd"}
yaml-rust = "0.4.3"

[dependencies.redis]
version = "*"
