[package]
name = "lidar_pipeline"
version = "0.1.0"
authors = ["guilhembn <gbuisan@laas.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "lidar_pipeline"
path = "src/main.rs"

[dependencies]
lidar_rd = {git = "https://github.com/rustyducks/lidar_rd"}
yaml-rust = "0.4.3"
serialport = "4.0.1"
anyhow = "1.0.48"
signal-hook = "0.3.10"
clap = "2.33.3"
protobuf = "2"

[build-dependencies]
protobuf-codegen-pure = "2.25.2"
protoc-rust = "2.25.2"
